feat: Phase 2 - OS非依存パス処理への完全移行
- Windows固有パス処理の完全除去
  - C:\直書きパスを設定プロパティ化 (mirel.storage-dir)
  - \パス結合をPath.resolve()でOS非依存化

- 設計改善: StorageUtil + StorageConfig分離
  - StorageConfig: @Component + @Value でプロパティ管理
  - StorageUtil: 純粋なUtilityクラスに復帰

- 対象ファイル修正:
  - StorageUtil.java: プロパティベース + Path API
  - FileUtil.java: Path.resolve()でZIPファイル名生成
  - FileRegisterServiceImpl.java: StringUtils.joinWith → Path.resolve()
  - SourceResourceUtil.java: \処理 → File.separatorChar
  - SteContext.java: replaceAll → File.separator
  - StructureReader.java: ハードコードパス除去
  - ListResourceCommandTest.java: クラスパスリソース化

- .gitattributes追加: 改行コード統制
  - Java/Web/Config ファイル → LF統一
  - Shell scripts → LF強制
  - Binary files → 無変更

Phase 2受け入れ基準達成:
✅ Windows固有パスがゼロ
✅ 全I/OがPath/Filesベース
✅ プロパティで外部化
✅ 改行統制でクロスプラットフォーム対応